--- a/src/doc/scss/qc-doc-sdg.scss
+++ b/src/doc/scss/qc-doc-sdg.scss
@@ -96,33 +96,23 @@ a {
 
   &.pseudo-hover {
     @include hover-link();
+    --qc-color-link-visited: var(--qc-color-link-hover);
   }
   &.pseudo-active {
     @include active-link();
+    --qc-color-link-visited: var(--qc-color-link-active);
+    --qc-color-link-focus: var(--qc-color-link-active);
+    --qc-color-link-hover: var(--qc-color-link-active );
   }
   &.pseudo-focus {
     @include focus-link();
+    --qc-color-link-visited: var(--qc-color-link-focus);
   }
   &.pseudo-visited {
-    color: token-value(color,link,visited)!important;
+    --qc-color-link-text: var(--qc-color-link-visited);
   }
-  &.not-visited:visited:not(:hover) {
-    color: token-value(color,link,text);
-  }
-}
-
-span.qc-ext-link-img {
-  a.pseudo-visited  & {
-    background: token-value(color link visited)!important;
-  }
-  a.pseudo-focus  & {
-    background: token-value(color link hover)!important;
-  }
-  a.pseudo-hover  & {
-    background: token-value(color link hover)!important;
-  }
-  a.pseudo-active  & {
-    background: token-value(color link active)!important;
+  &.not-visited {
+    --qc-color-link-visited: var(--qc-color-link-text);
   }
 }
 
