Doc - remplacement des titres de section par des titres de tableau

--- a/src/sdg/components/Alert/_alert.html
+++ b/src/sdg/components/Alert/_alert.html
@@ -33,9 +33,9 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
