--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -142,9 +142,10 @@
 
 <h3>Classes CSS</h3>
 
-<h4>Classes de boutons</h4>
+
 <div class="table-overflow">
     <table class="qc-table qc-striped">
+        <caption>Classes de boutons</caption>
         <thead>
         <tr>
             <th>Classe / Attribut</th>
@@ -188,9 +189,10 @@
     </table>
 </div>
 
-<h4>Classes pour le contenant parent d'un groupe de boutons</h4>
+
 <div class="table-overflow">
     <table class="qc-table qc-striped">
+        <caption>Classes pour le contenant parent d'un groupe de boutons</caption>
         <thead>
         <tr>
             <th>Classe / Attribut</th>
