--- a/src/sdg/components/Checkbox/_checkbox.html
+++ b/src/sdg/components/Checkbox/_checkbox.html
@@ -41,9 +41,10 @@
 </qc-doc-exemple>
 
 
-<h4>Attributs de qc-checkbox</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs de qc-checkbox</caption>
     <thead>
     <tr>
       <th>Nom</th>
