--- a/src/sdg/components/ChoiceGroup/_choiceGroup.html
+++ b/src/sdg/components/ChoiceGroup/_choiceGroup.html
@@ -201,10 +201,9 @@
 </qc-doc-exemple>
 
 
-<h5 id="choice-group-doc">Attributs de qc-choice-group</h5>
-
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption id="choice-group-doc">Attributs de qc-choice-group</caption>
     <thead>
     <tr>
       <th>Nom</th>
