--- a/src/sdg/components/DropdownList/_select.html
+++ b/src/sdg/components/DropdownList/_select.html
@@ -102,9 +102,10 @@
 
 <h4>Documentation technique</h4>
 
-<h5>Attributs</h5>
+
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Attributs</caption>
         <thead>
         <tr>
             <th>Nom</th>
@@ -210,10 +211,11 @@
     </table>
 </div>
 
-<h5>Propriété JS</h5>
+
 
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Propriété JS</caption>
         <thead>
             <tr>
                 <th>Nom</th>
