--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -113,9 +113,9 @@
 
 <h4>Documentation technique</h4>
 
-<h4>Attributs</h4>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -182,9 +182,10 @@
   </table>
 </div>
 
-<h4>Propriété js</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Propriété js</caption>
     <thead>
     <tr>
       <th>Nom</th>
