--- a/src/sdg/components/ToggleSwitch/_toggleSwitch.html
+++ b/src/sdg/components/ToggleSwitch/_toggleSwitch.html
@@ -63,9 +63,9 @@
 
 <h4>Documentation technique</h4>
 
-<h5>Attributs de <code>qc-toggle-switch</code></h5>
+
 <table class="qc-table qc-striped component-attributes-description">
-    <thead>
+    <caption>Attributs de <code>qc-toggle-switch</code></caption>    <thead>
     <tr>
         <th>Nom</th>
         <th>Valeur attendue</th>
@@ -109,8 +109,9 @@
     </tbody>
 </table>
 
-<h5>Attributs de <code>qc-toggle-switch-group</code></h5>
+
 <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs de <code>qc-toggle-switch-group</code></caption>
     <thead>
     <tr>
         <th>Nom</th>
