--- a/src/sdg/components/SearchBar/_searchBar.html
+++ b/src/sdg/components/SearchBar/_searchBar.html
@@ -63,9 +63,9 @@
 </qc-doc-exemple>
 
 
-<h3>Attributs</h3>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
