--- a/src/sdg/components/SearchInput/_searchInput.html
+++ b/src/sdg/components/SearchInput/_searchInput.html
@@ -42,9 +42,9 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Attributs</caption>
         <thead>
         <tr>
             <th>Nom</th>
