--- a/src/sdg/components/ToTop/_toTop.html
+++ b/src/sdg/components/ToTop/_toTop.html
@@ -16,9 +16,10 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
